Fixed Cards on Mobile

--- a/style.css
+++ b/style.css
@@ -103,21 +103,16 @@ li.icon {
   }
 }
 
-@media screen and (max-width: 800px) {
-  .wide-card {
-    height: 1080px;
-  }
-}
-
 .notify-banner {
-  background-color: #fbfbfb;
-  padding: 1rem;
+  background-color: #f2f2f2;
+  padding: 1rem 6rem;
   display: grid;
   place-content: center;
+  text-align: center;
 }
 
 .wide-card {
-  height: 592px;
+  height: 692px;
   background-color: #f3f3f3;
   margin-bottom: 1rem;
   padding: 3rem;
@@ -133,6 +128,7 @@ li.icon {
   font-size: 56px;
   font-weight: 500;
 }
+
 .wide-card h2 {
   font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", Helvetica,
     Arial, sans-serif;
@@ -144,6 +140,26 @@ li.icon {
 .wide-card a {
   font-size: 1.4rem;
   padding: 1rem;
+}
+
+/* Mobile Size */
+@media screen and (max-width: 600px) {
+  .wide-card {
+    height: 520px;
+  }
+  
+  .wide-card h1 {
+    font-weight: 400;
+    font-size: 32px;
+  }
+
+  .wide-card h2 {
+    font-size: 18px;
+  }
+
+  .wide-card a {
+    font-size: 16px;
+  }
 }
 
 .iphone-13-pro {
@@ -176,8 +192,8 @@ li.icon {
 }
 
 hr {
-  padding-top: 0.5rem; 
-  margin-top: 0.5rem; 
+  padding-top: 0.5rem;
+  margin-top: 0.5rem;
   border: none;
   border-top: 1px solid rgba(110, 110, 115, 0.6);
 }
